# bcli

./: .gitignore  CMakeLists.txt  README.md
doxygen/: Doxyfile  layout.xml
examples/: 01_bcli_basic.cpp  02_bcli_settter.cpp  03_bcli_checker.cpp  04_bcli_deps_bans.cpp  05_bcli_get.cpp  06_bcli_multiple.cpp  07_bcli_real.cpp  08_bcli_help.cpp  09_bcli_help_multiple.cpp  CMakeLists.txt
include/bcli/: bcli.hpp
tests/: CMakeLists.txt  test_bcli.cpp  test_checkers.cpp  test_param.cpp  test_parser.cpp  test_utils.cpp
tests/data/: test.txt.bz2  test.txt.lz4
